# version-lsp

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  flake.nix
.claude/rules/: implementation.md  testing.md
.github/workflows/: audit.yaml  ci.yaml  dependabot-auto-merge.yaml  release.yaml
docs/: ARCHITECTURE.md  DESIGN.md  TODO.md  npm-version-spec.md
editors/code/: README.md  package-lock.json  package.json  tsconfig.json
editors/code/src/: extension.ts
src/: config.rs  main.rs
src/lsp/: backend.rs  code_action.rs  diagnostics.rs  mod.rs  refresh.rs  resolver.rs
src/lsp/code_action/: constraint.rs  lock.rs  mod.rs  upgrade.rs
src/parser/: cargo_toml.rs  compose.rs  deno_json.rs  github_actions.rs  go_mod.rs  mod.rs  package_json.rs  package_swift.rs  pnpm_workspace.rs  pyproject_toml.rs  traits.rs  types.rs
src/version/: cache.rs  checker.rs  error.rs  lock.rs  matcher.rs  mod.rs  registry.rs  resolver.rs  semver.rs
src/version/locks/: cargo.rs  deno.rs  mod.rs  npm.rs  pdm.rs  pipfile.rs  pnpm.rs  poetry.rs  uv.rs  yarn.rs
src/version/matchers/: crates.rs  docker.rs  github_actions.rs  go.rs  jsr.rs  mod.rs  npm.rs  pypi.rs  swift_pm.rs
src/version/registries/: crates_io.rs  docker.rs  github.rs  go_proxy.rs  jsr.rs  mod.rs  npm.rs  pypi.rs
src/version/resolvers/: crates.rs  github_actions.rs  go.rs  jsr.rs  mod.rs  npm.rs  pnpm.rs
tests/: e2e_docker.rs  e2e_github_actions.rs  e2e_jsr.rs  e2e_lock_pin.rs  e2e_pypi.rs  e2e_swift_pm.rs  lsp_e2e_test.rs  version.rs
tests/helper/: lsp.rs  registry.rs
