[package]
name = "version-lsp"
version = "0.0.1"
authors = ["skanehira"]
edition = "2024"

[dependencies]
# LSP
tower-lsp = "0.20"
async-trait = "0.1"

# Parser
tree-sitter = "0.24"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Version management
semver = "1.0"

# Database
rusqlite = { version = "0.37", features = ["bundled"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
mockito = "1.4"
rstest = "0.24"
tempfile = "3.10"
