[package]
name = "version-lsp"
version = "0.2.0"
authors = ["skanehira"]
edition = "2024"

[dependencies]
# LSP
tower-lsp = "0.20"
async-trait = "0.1"

# Parser
tree-sitter = "0.26"
tree-sitter-yaml = "0.7"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Version management
semver = "1.0"

# Date/Time
chrono = "0.4"

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
dirs = "6.0"
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
indexmap = { version = "2.12.1", features = ["serde"] }
futures = "0.3"
regex = "1.12.2"

[dev-dependencies]
mockall = "0.14"
mockito = "1.4"
rstest = "0.26"
serial_test = "3"
tempfile = "3.24"
futures = "0.3"
tower = "0.5"
